transparent black bg for main
t

--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,10 @@ body {
 }
 
 header, main {
-  max-width: 67%;
+  max-width: 60%;
   text-align: center;
   margin: auto;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .menu {
