--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ header, main {
   max-width: 60%;
   text-align: center;
   margin: auto;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.35);
+  height: 100%;
 }
 
 .menu {
