--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,8 @@ header, main {
   max-width: 60%;
   text-align: center;
   margin: auto;
-  background: rgba(0, 0, 0, 0.35);
-  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  height: 100vh;
 }
 
 .menu {
