--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,14 @@ header, main {
   margin: auto;
 }
 
-header{
+header, footer{
   background: rgba(0, 0, 0, 0.1);
   height: 10vh;
 }
 
 main{
   background: rgba(0, 0, 0, 0.1);
-  height: 90vh;
+  height: 80vh;
 }
 
 .menu {
