--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
 
 :root {
 /* VARIABLES: Background, Text, Link-Hover, Other links  */
@@ -9,8 +11,8 @@
 	--link-1: #65ce61;
 
 /* Original  */
-	--txt-2: #cbb9ad;
 	--bg-2: #2e3138;
+	--txt-2: #cbb9ad;
 	--link-h-2: #65728d;
 	--link: #8aa4b5;
 
@@ -21,16 +23,16 @@
 	--link-3: #65ce61;
 
 
-/* CHANGE THESE  */
-	--bg: var(--bg-2);
-	--txt: var(--txt-2);
-	--link-h: var(--link-h-2);
-	--link: var(--link-2);
+/* CHANGE NUMBER ONLY  */
+	--bg: var(--txt-3);
+	--txt: var(--bg-3);
+	--link-h: var(--link-h-3);
+	--link: var(--link-3)
 }
 
 
 body {
-	font-family: 'Georgia', serif;
+	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: bold;
 	background: var(--bg);
 	color: var(--txt);
@@ -47,21 +49,27 @@ main {
 
 .home-h1 {
 	position: absolute;
-	top: 40%;
+	top: 20%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	font-size: calc(1em + 4vw);
 }
 
 .home-f {
+	bottom: 1vh;
 	position:absolute;
-	bottom:2vh;
 	left: 5vw;
 	right: 5vw;
 	width:90vw;
 	height: auto;
 	font-size: calc(1em + 0.75vw);
 }
+#webring {
+	font-size: 1em;
+	text-align: center;
+	RGBA(238, 255, 238, 0.45)
+}
+
 
 .paths {
 	font-size: calc(1em + 2vw);
@@ -72,7 +80,7 @@ main {
 	text-align:right;
 }
 
-a:link.Names, a:visited.Names, a:hover.Names, a:active.Names, a:link.home-link, a:visited.home-link, a:hover.home-link, a:active.home-link {
+a:link.wr-2, a:visited.wr-2, a:hover.wr-2, a:active.wr-2, a:link.wr-1, a:visited.wr-1, a:active.wr-1, a:hover.wr-1 , a:link.Names, a:visited.Names, a:hover.Names, a:active.Names, a:link.home-link, a:visited.home-link, a:hover.home-link, a:active.home-link {
 	text-decoration: none;
 	color: inherit;
 }
@@ -82,9 +90,23 @@ a:hover.home-link{
 }
 
 .Photos {
-	width: 75%;
+	display: block;
+	width: 75vw;
 	height: auto;
 	border: 3px solid #000;
+	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.licenses {
+	display: block;
+	max-width: 75vw;
+	height: auto;
+	text-align: center;
+	margin: auto;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .Names {
@@ -108,7 +130,7 @@ article {
 	font-size: calc(1em + 0.75vw)
 }
 
-a:link, a:visited, a:active {
+a:link, a:visited, a:active, a:link.wr-1, a:visited.wr-1, a:active.wr-1, a:hover.wr-1 {
 	color:var(--link)
 }
 a:hover{
